tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr111613.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr111613.c" (c, x86_64-unknown-linux-gnu)
fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn set_field1_and_field2(%arg0: rec_bitfield*) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_bitfield*):
        %25 = alloca rec_bitfield*, "b", align 8
        store %arg0, %25
        %26 = const 1 : u32i
        %27 = load %25 : rec_bitfield*, align 8
        %28 = get_member %27[0] "field1" : u8i*
        <unmodeled: cir.set_bitfield>
        %30 = const 1 : u32i
        %31 = load %25 : rec_bitfield*, align 8
        %32 = get_member %31[0] "field2" : u8i*
        <unmodeled: cir.set_bitfield>
        return
}
fn new_bitfield() -> rec_bitfield* [internal, c, no_inline, dso_local, nothrow] {
    %12 = alloca rec_bitfield*, "__retval", align 8
    %13 = alloca rec_bitfield*, "b", align 8
    %14 = get_global @malloc : ((u64i) -> void*)*
    %15 = const 4 : u64i
    %16 = call @malloc(%15) : void* [all]
    %17 = cast(bitcast) %16 : rec_bitfield*
    store %17, %13, align 8
    %18 = const 1 : u32i
    %19 = load %13 : rec_bitfield*, align 8
    %20 = get_member %19[0] "field3" : u8i*
    <unmodeled: cir.set_bitfield>
    %22 = load %13 : rec_bitfield*, align 8
    call @set_field1_and_field2(%22) [all]
    %23 = load %13 : rec_bitfield*, align 8
    store %23, %12
    %24 = load %12 : rec_bitfield*
    return %24
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_bitfield*, "b", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = call @new_bitfield() : rec_bitfield* [all]
    store %3, %1, align 8
    scope {
        %6 = load %1 : rec_bitfield*, align 8
        %7 = get_member %6[0] "field3" : u8i*
        <unmodeled: cir.get_bitfield>
        %9 = cast(integral) %8 : s32i
        %10 = const 1 : s32i
        %11 = cmp ne %9, %10 : bool
        if %11 {
            call @abort() [all]
            yield
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
