tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr111863_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr111863-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn f(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %14 = alloca s32i, "a", align 4
        %15 = alloca s32i, "__retval", align 4
        store %arg0, %14
        %16 = const 2 : s32i
        %17 = load %14 : s32i, align 4
        %18 = and %17, %16 : s32i
        store %18, %14, align 4
        %19 = load %14 : s32i, align 4
        %20 = const 1 : s32i
        %21 = cmp ne %19, %20 : bool
        %22 = cast(bool_to_int) %21 : s32i
        store %22, %15
        %23 = load %15 : s32i
        return %23
}
fn abort() -> void [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "t", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : s32i
    %4 = call @f(%3) : s32i [all]
    store %4, %1, align 4
    scope {
        %11 = load %1 : s32i, align 4
        %12 = cast(int_to_bool) %11 : bool
        %13 = not %12 : bool
        if %13 {
            call @abort() [all]
            yield
        }
        yield
    }
    %5 = get_global @.str : s8i[4]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = load %1 : s32i, align 4
    %8 = call @printf(%6, %7) : s32i [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
